# bingo

./: .gitignore  AGENTS.md  CLAUDE.md  PKG-INFO  README.md  README_ko.md  README_zh.md  install.ps1  install.sh  jwt_response.txt  push.sh  pyproject.toml
.bingo/: project-memory.md
.claude/hooks/: bingo-memory-hook.py
.codex/: project-memory.md
.github/workflows/: fp-regression.yml
bingo/: __init__.py  cli.py  config.py  i18n.py
bingo/application/: __init__.py  chat.py
bingo/batch/: __init__.py  runner.py
bingo/blackboard/: __init__.py  store.py
bingo/chain/: __init__.py  tracker.py
bingo/core/: __init__.py  action_runtime_helpers.py  amplifier.py  anti_hallucination.py  authorization.py  change_memory.py  code_guard.py  engagement.py  execution_anchor.py  execution_runtime.py  executor_state.py  file_watcher.py  intelligence.py  ip_block_detector.py  local_state.py  memory.py  multi_agent.py  parallel_runner.py  phantom_guard.py  project_checkpoint.py  proxy_hunter.py  proxy_rotator.py  rollback.py  session_bridge.py  session_parser.py  target_memory.py  target_state.py  vuln_agents.py  whitebox_analyzer.py  zero_hal_v5.py  zeroday.py
bingo/core/apt/: c2_channel.py  lateral_movement.py  phishing.py  supply_chain.py
bingo/core/exploits/: glibc_tunables.py  mediatek_wappd.py  mitel_micollab.py  webp_cve2023_4863.py
bingo/core/recon/: __init__.py  active.py  asset_db.py  passive.py
bingo/core/v7/: __init__.py  contracts.py  coverage.py  decision.py  evidence_graph.py  executor_bridge.py  loop_policy.py  report_service.py  reporting.py  runtime.py  state_machine.py
bingo/hitl/: __init__.py  gate.py
bingo/hooks/: __init__.py  pre_tool_hook.py
bingo/knowledge/: __init__.py  cve_sync.py  loader.py
bingo/knowledge/base/: Untitled
bingo/lang/: __init__.py  strings.py
bingo/models/: __init__.py  base.py  deepseek_prompt.py  registry.py  system_prompt.py
bingo/models/prompt_profiles/: glm5.2.txt  grok4.5.txt  grok4.5_2.txt  hy3.txt
bingo/orchestrator/: __init__.py  engine.py
bingo/proxy/: __init__.py  manager.py
bingo/redteam/: __init__.py  agent.py  agents.py  pipeline.py  session.py  verification.py
bingo/roles/: __init__.py  manager.py
bingo/runtime/: __init__.py  claude_adapter.py  contracts.py  legacy_tool_decoder.py  provider.py  session.py
bingo/skills/: SKILLS_INDEX.md  __init__.py  engine.py  skills_data.py  skills_data10.py  skills_data11.py  skills_data12.py  skills_data13.py  skills_data14.py  skills_data15.py  skills_data16.py  skills_data2.py  skills_data3.py  skills_data4.py  skills_data5.py  skills_data6.py  skills_data7.py  skills_data8.py  skills_data9.py
bingo/tools/: __init__.py  acpv.py  admin_panel_auto.py  advanced_sqli.py  agent_tools.py  ai_code_sec_surface.py  apache_druid_ssrf.py  api_discovery.py  api_dynamic_capture.py  api_version_enum.py  apk_secret_scanner.py  apk_toolkit.py  auth_bypass.py  auth_tools.py  bizlogic_fuzzer.py  burp_engine.py  cache_poison.py  cloud_bucket_scanner.py  cloud_token_recon.py  cspt_waf_bypass.py  csrf_scanner.py  cswsh_rce.py  ctf_lab_engine.py  db_dumper.py  db_privesc.py  deserialize_tester.py  dom_xss_scanner.py  dompurify_pp_bypass.py  dotnet_analyzer.py  downloader.py  exe_analyzer.py  executor.py  findings_exporter.py  ghostcat_scanner.py  gnuboard.py  graphql_advanced.py  graphql_tester.py  hash_crack.py  hash_lookup.py  http_probe.py  (+44 more)
bingo/tools_ext/: __init__.py  autoexploit_modules.py  loader.py  pentest_tools.py  vshell_tools.py
bingo/ui/: __init__.py  commands.py  presenter.py  terminal.py  view_models.py
bingo/vulns/: __init__.py  manager.py
docs/: BINGO_V7_ARCHITECTURE.md  ENGINEERING.md
scripts/: bingo-memory-autostart.sh  bingo-memory-stop.sh  bingo-memory-sync.sh  bingo-memory-watch.sh  codex-memory-autostart.sh  codex-memory-stop.sh  codex-memory-sync.sh  codex-memory-watch.sh  install-change-memory-hook.sh
scripts/git-hooks/: post-commit
tests/: test_advanced_scanner_false_positives.py  test_change_memory.py  test_chat_application.py  test_chat_presentation.py  test_claude_adapter.py  test_engagement_authority.py  test_execution_runtime.py  test_hint_tty_sane.py  test_local_state.py  test_model_stream_transport.py  test_mvvs_false_positive.py  test_project_checkpoint.py  test_report_service.py  test_runtime_contracts.py  test_task_graph_frontier.py  test_terminal_completion_regressions.py  test_v7_architecture.py  test_vshell_tools.py
(+71 files in other folders)
