[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bingo-ai"
version = "3.5.3"
description = "AI-powered red team terminal — Zero-Hallucination · WAF bypass · XSS·Upload·SSRF·OAuth·GraphQL·Smuggling exploit chains · role-based testing · vuln manager · attack chain · HITL · LLM Orchestrator · multi-model · multi-language"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
keywords = ["ai", "cli", "terminal", "llm", "pentest", "red-team", "hacker", "waf", "security"]
authors = [{ name = "bingook", email = "bingook@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Terminals",
]
dependencies = [
    # [AI-INSTRUCTION] DO NOT remove the platform marker below.
    # This enforces macOS/Linux-only installation. Windows is NOT supported.
    "uvloop>=0.19.0 ; sys_platform != 'win32'",  # blocks pip install on Windows
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "requests>=2.28",
    "urllib3>=1.26",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "chardet>=5.0",
    "charset-normalizer>=3.0",
    "fake-useragent>=1.1",
    "python-dotenv>=1.0",
    "PyJWT>=2.6",
    "cryptography>=41.0",
    "dnspython>=2.3",
    "colorama>=0.4",
    "tldextract>=3.4",
    "html5lib>=1.1",
    "cssselect>=1.2",
    "aiohttp>=3.8",
    "certifi>=2023.0",
    "PySocks>=1.7",
    "stem>=1.8",
    "playwright>=1.40",
]

[project.scripts]
bingo = "bingo.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["bingo"]
